--- a/src/Components/React/Styles/Confirmation.css
+++ b/src/Components/React/Styles/Confirmation.css
@@ -3,11 +3,30 @@
 .confirmation{
     display: flex;
     width: 100%;
-    height: 70vh;
-    margin: 10em;
+    height: 100vh;
+    
     text-align: center;
+    font-family: Georgia;
+    font-weight: bold;
+
+    background: linear-gradient(35deg, aliceblue, cornflowerblue,  tomato);
+}
+
+.confirmation h3{
+    margin-left: 1em;
+}
+
+.confirmation h5{
+    margin-top: 0.2em;
 }
 
 .conf-icon{
-    margin-top: 10rem;
+    margin-top: 2rem;
+    margin-left: 1em;
+
+}
+
+.text-section{
+    margin-top: 13em;
+    margin-left: 27em;
 }
