--- a/src/Components/React/Styles/Sidebar.css
+++ b/src/Components/React/Styles/Sidebar.css
@@ -1,26 +1,32 @@
+.sidebar-container {
+  width: 20%;
+  margin: 0%;
+  padding: 0%;
+  height: 100vh;
 
-.sidebar-container{
-    width: 20%;
-    margin: 0%;
-    padding: 0%;
-    height: 150vh;
-
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 20px;
-    border-right: 5px solid tomato;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 20px;
+  border-right: 5px solid tomato;
 }
 
-.sidebar-title{
-    margin-top: 10vh;
-    text-align: center;
-    font-size: 25px;
-}
-.sidebar-items{
-    padding-left: 20px;
+.sidebar-title {
+  /* margin-top: 10vh; */
+  text-align: center;
+  font-size: 25px;
 }
 
-.emp-active{
-    background-color: red;
-    color: red;
-    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.11), 0 10px 12px 0 rgba(0, 0, 0, 0.21);
+.sidebar-items {
+  display: flex;
+  flex-flow: row wrap;
+  margin-top: 4em;
+  box-shadow: 0 4px 5px 0 rgba(0,0,0,0.3), 0 10px 15px 0 rgba(0,0,0,0.3);
+  /* background: linear-gradient(45deg, aliceblue, darkolivegreen); */
+  margin-left: 10px;
+  width: 10.4em;
+}
+
+.sidebar-items li{
+    list-style: none;
+  width: 12em;
+margin-left: -2.2em;
 }
