--- a/src/Components/React/Styles/Homepage.css
+++ b/src/Components/React/Styles/Homepage.css
@@ -42,9 +42,14 @@
     
 }
 
-.wel-text h4{
+.wel-text h2{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 40px;
+    color: aliceblue;
+
+}
+.wel-text h4{
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: aliceblue;
 
 }
